err/openpgp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/OpenPGP-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Listing './lib/python3.5/site-packages/src/openpgp'...
Listing './lib/python3.5/site-packages/src/openpgp/sap'...
Compiling './lib/python3.5/site-packages/src/openpgp/sap/api.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/api.py", line 116
    except PGPCryptoError, m:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/crypto.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/crypto.py", line 155
    raise NotImplementedError, "Haven't got around to SIG_STANDALONE"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/list.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/list.py", line 216
    except IndexError, AttributeError:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/openpgp/sap/msg'...
Compiling './lib/python3.5/site-packages/src/openpgp/sap/msg/KeyMsg.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/msg/KeyMsg.py", line 67
    except IndexError, BlockLeaderError:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/openpgp/sap/pkt'...
Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/LiteralData.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/LiteralData.py", line 96
    raise PGPValueError, "Literal data format must be 'b' or 't'. Received->(%s)" % str(format)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/MPI.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/MPI.py", line 73
    raise self.err[0], self.err[1]
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/ModificationDetectionCode.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/ModificationDetectionCode.py", line 44
    raise PGPPacketError, "MDCode packet body must be 20 characters long, not->(%s)." % len(d)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/Packet.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/Packet.py", line 105
    raise PGPError, "Fix me." # just to be sure
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/PublicKeyEncryptedSessionKey.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/PublicKeyEncryptedSessionKey.py", line 65
    raise PGPValueError, "Unsupported public key algorithm. Received alg_pubkey->(%s)" % self.alg_pubkey
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/S2K.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/S2K.py", line 107
    raise PGPValueError, "S2K count value %s out of range." % kwords['count']
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/SecretKey.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/SecretKey.py", line 116
    raise NotImplementedError, "3DES"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/Signature.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/Signature.py", line 206
    raise SignatureSubpacketValueError, "Subpacket (# %s) value must be 0 or 1." % (str(subtype))
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/openpgp/sap/pkt/SymmetricKeyEncryptedSessionKey.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/pkt/SymmetricKeyEncryptedSessionKey.py", line 118
    raise PGPValueError, "Symmetric session key version %s is out of range." % version
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/src/openpgp/sap/util'...
Compiling './lib/python3.5/site-packages/src/openpgp/sap/util/strnum.py'...
***   File "./lib/python3.5/site-packages/src/openpgp/sap/util/strnum.py", line 67
    l = 0L
         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
